--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <title>R.I.P Ayrton Senna ⚰</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="style.css"
+      media="screen"
+    />
   </head>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
